@@ -1,6 +1,7 @@
 Version 0.3.9+
 	* Add ext.jugparallel for parallel nfold crossvalidation
 	* cluster_agreement for non-ndarrays
+	* Add histogram option to ``milk.kmeans.assign_centroid``
 
 Version 0.3.9 2011-03-15 by luispedro
 	* Improve speed of k-nearest neighbour (10x on scikits-learn benchmark)
